Deleted unnecessary files. Updated index.html
In Index.html added links to social networks, now they are opening in new page.

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 						<h1><strong class="name">I am Dunkan, a professional photographer working for </strong> <a href="https://www.nationalgeographic.com"><strong class="name">National Geographic </strong></a></h1>
 						<br>
 						<ul class="icons">
-							<li><a href="#" class="icon style2 fa-behance"><span class="label">Behance</span></a></li>
-							<li><a href="#" class="icon style2 fa-facebook"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon style2 fa-instagram"><span class="label">Instagram</span></a></li>
+							<li><a href="https://www.behance.net" class="icon style2 fa-behance" target="_blank"><span class="label">Behance</span></a></li>
+							<li><a href="https://www.facebook.com" class="icon style2 fa-facebook" target="_blank"><span class="label">Facebook</span></a></li>
+							<li><a href="https://www.instagram.com" class="icon style2 fa-instagram" target="_blank"><span class="label">Instagram</span></a></li>
 							
 						</ul>
 					</header>
